--- a/index.html
+++ b/index.html
@@ -22,109 +22,105 @@
             recommended for many data augmentation tasks.
         </p>
         <br>
-        <form id="FileForm">
-            <p>File Input:</p>
-            <input type="file" id="myFile" name="filename">
-            <br><br>
+        <div class="cols-parent">
+            <div class="cols">
+                <form id="FileForm">
+                    <p>File Input:</p>
+                    <input type="file" id="myFile" name="filename">
+                    <br><br>
 
-            <p>Number of images:</p>
-            <input type="number"
-                name="number" 
-                id="imageAmount"
-                min="1" 
-                max="100">
-            <br><br>
+                    <p>Number of images:</p>
+                    <input type="number"
+                        name="number" 
+                        id="imageAmount"
+                        min="1" 
+                        max="100"
+                        value="1">
+                    <br><br>
 
-            <p>Create images with: </p>
-            <fieldset>
-                <legend>Geometric Modifications:</legend>
-                <input type="checkbox" 
-                    name="check" 
-                    id="checkbox1" 
-                    value="html">
-                <label for="checkbox1">Horizontal flip</label>
-                <br>
-                <input type="checkbox" 
-                    name="check" 
-                    id="checkbox2" 
-                    value="css">
-                <label for="checkbox2">Vertical flip</label>
-                <br>
-                <input type="checkbox" 
-                    name="check" 
-                    id="checkbox3" 
-                    value="javascript">
-                <label for="checkbox3">Rotation</label>
-                <br>
-                <input type="checkbox" 
-                    name="check" 
-                    id="checkbox4" 
-                    value="javascript">
-                <label for="checkbox4">Cropping</label>
-                <br>
-                <input type="checkbox" 
-                    name="check" 
-                    id="checkbox5" 
-                    value="javascript">
-                <label for="checkbox5">Translation</label>
-                <br>
-                <input type="checkbox" 
-                    name="check" 
-                    id="checkbox6" 
-                    value="javascript">
-                <label for="checkbox6">Shearing</label>
-                <br>
-            </fieldset>
-            <br>
+                    <p>Create images with: </p>
+                    <fieldset>
+                        <legend>Geometric Modifications:</legend>
+                        <input type="checkbox" 
+                            name="check" 
+                            id="checkbox1">
+                        <label for="checkbox1">Horizontal flip</label>
+                        <br>
+                        <input type="checkbox" 
+                            name="check" 
+                            id="checkbox2">
+                        <label for="checkbox2">Vertical flip</label>
+                        <br>
+                        <input type="checkbox" 
+                            name="check" 
+                            id="checkbox3">
+                        <label for="checkbox3">Rotation</label>
+                        <br>
+                        <input type="checkbox" 
+                            name="check" 
+                            id="checkbox4">
+                        <label for="checkbox4">Cropping</label>
+                        <br>
+                        <input type="checkbox" 
+                            name="check" 
+                            id="checkbox5">
+                        <label for="checkbox5">Translation</label>
+                        <br>
+                        <input type="checkbox" 
+                            name="check" 
+                            id="checkbox6">
+                        <label for="checkbox6">Shearing</label>
+                        <br>
+                    </fieldset>
+                    <br>
 
-            <fieldset>
-                <legend>Color Modifications:</legend>
-                <input type="checkbox" 
-                    name="check" 
-                    id="checkbox7" 
-                    value="html">
-                <label for="checkbox7">Brightness</label>
-                <br>
-                <input type="checkbox" 
-                    name="check" 
-                    id="checkbox8" 
-                    value="css">
-                <label for="checkbox8">Contrast</label>
-                <br>
-                <input type="checkbox" 
-                    name="check" 
-                    id="checkbox9" 
-                    value="javascript">
-                <label for="checkbox9">Saturation</label>
-                <br>
-                <input type="checkbox" 
-                    name="check" 
-                    id="checkbox10" 
-                    value="javascript">
-                <label for="checkbox10">Invert colors</label>
-            </fieldset>
-            <br>
+                    <fieldset>
+                        <legend>Color Modifications:</legend>
+                        <input type="checkbox" 
+                            name="check" 
+                            id="checkbox7">
+                        <label for="checkbox7">Brightness</label>
+                        <br>
+                        <input type="checkbox" 
+                            name="check" 
+                            id="checkbox8">
+                        <label for="checkbox8">Contrast</label>
+                        <br>
+                        <input type="checkbox" 
+                            name="check" 
+                            id="checkbox9">
+                        <label for="checkbox9">Saturation</label>
+                        <br>
+                        <input type="checkbox" 
+                            name="check" 
+                            id="checkbox10">
+                        <label for="checkbox10">Invert colors</label>
+                    </fieldset>
+                    <br>
 
-            <fieldset>
-                <legend>Noise Modifications:</legend>
-                <input type="checkbox" 
-                    name="check" 
-                    id="checkbox11" 
-                    value="html">
-                <label for="checkbox11">Gaussian noise</label>
-                <br>
-                <input type="checkbox" 
-                    name="check" 
-                    id="checkbox12" 
-                    value="css">
-                <label for="checkbox12">Salt and Pepper noise</label>
-            </fieldset>
-            <br>
-            <div>
-                <input type="submit" value="Submit">
+                    <fieldset>
+                        <legend>Noise Modifications:</legend>
+                        <input type="checkbox" 
+                            name="check" 
+                            id="checkbox11">
+                        <label for="checkbox11">Gaussian noise</label>
+                        <br>
+                        <input type="checkbox" 
+                            name="check" 
+                            id="checkbox12">
+                        <label for="checkbox12">Salt and Pepper noise</label>
+                    </fieldset>
+                    <br>
+                    <div>
+                        <input type="submit" value="Submit">
+                        <input type="button" value="Submit" onclick="getForm()">
+                    </div>
+                </form>
             </div>
-            
-        </form>
+            <div>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae illo consectetur necessitatibus maxime fugit modi vero distinctio obcaecati laborum, harum, blanditiis, dolore corporis! Fugiat rerum cupiditate, atque est totam eaque?</p>
+            </div>
+        </div>
     </main>
     <footer>
         <div>
