--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/fabric@5.3.0/dist/fabric.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
     <script src="script.js" defer></script>
-    <title>DataAugmentor</title>
+    <title>Data Augmentor</title>
 </head>
 <body>
     <header>
@@ -66,10 +68,10 @@
                             id="checkbox5">
                         <label for="checkbox5">Translation</label>
                         <br>
-                        <input type="checkbox" 
-                            name="check" 
-                            id="checkbox6">
-                        <label for="checkbox6">Shearing</label>
+                        <label for="checkbox6">
+                            <input type="checkbox" name="check" id="checkbox6">
+                            Shearing
+                        </label>
                         <br>
                     </fieldset>
                     <br>
@@ -95,6 +97,11 @@
                             name="check" 
                             id="checkbox10">
                         <label for="checkbox10">Invert colors</label>
+                        <br>
+                        <label for="BlueTintCheckbox">
+                            <input type="checkbox" name="check" id="BlueTintCheckbox">
+                            Blue Tint
+                        </label>
                     </fieldset>
                     <br>
 
@@ -112,13 +119,19 @@
                     </fieldset>
                     <br>
                     <div>
-                        <input type="submit" value="Submit">
-                        <input type="button" value="Submit" onclick="getForm()">
+                        <input type="submit" value="Load Image">
                     </div>
                 </form>
+                
             </div>
             <div>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae illo consectetur necessitatibus maxime fugit modi vero distinctio obcaecati laborum, harum, blanditiis, dolore corporis! Fugiat rerum cupiditate, atque est totam eaque?</p>
+                <div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae illo consectetur necessitatibus maxime fugit modi vero distinctio obcaecati laborum, harum, blanditiis, dolore corporis! Fugiat rerum cupiditate, atque est totam eaque?</p>
+                </div>
+                <section class="download_section">
+                    <a id="downloadLink" download="image.png" style="display:inline-block; margin-top:10px;">Download Image</a>
+                    <p id="download_notification">&#8592 Download Ready</p>
+                </section>
             </div>
         </div>
     </main>
