--- a/index.html
+++ b/index.html
@@ -43,30 +43,30 @@
                     <p>Create images with: </p>
                     <fieldset>
                         <legend>Geometric Modifications:</legend>
-                        <input type="checkbox" 
-                            name="check" 
-                            id="checkbox1">
-                        <label for="checkbox1">Horizontal flip</label>
+                        <label for="checkbox1">
+                            <input type="checkbox" name="check" id="checkbox1">
+                            Horizontal flip
+                        </label>
                         <br>
-                        <input type="checkbox" 
-                            name="check" 
-                            id="checkbox2">
-                        <label for="checkbox2">Vertical flip</label>
+                        <label for="checkbox2">
+                            <input type="checkbox" name="check" id="checkbox2">
+                            Vertical flip
+                        </label>
                         <br>
-                        <input type="checkbox" 
-                            name="check" 
-                            id="checkbox3">
-                        <label for="checkbox3">Rotation</label>
+                        <label for="checkbox3">
+                            <input type="checkbox" name="check" id="checkbox3">
+                            Rotation
+                        </label>
                         <br>
-                        <input type="checkbox" 
-                            name="check" 
-                            id="checkbox4">
-                        <label for="checkbox4">Cropping</label>
+                        <label for="checkbox4">
+                            <input type="checkbox" name="check" id="checkbox4">
+                            Cropping
+                        </label>
                         <br>
-                        <input type="checkbox" 
-                            name="check" 
-                            id="checkbox5">
-                        <label for="checkbox5">Translation</label>
+                        <label for="checkbox5">
+                            <input type="checkbox" name="check" id="checkbox5">
+                            Translation
+                        </label>
                         <br>
                         <label for="checkbox6">
                             <input type="checkbox" name="check" id="checkbox6">
@@ -78,25 +78,25 @@
 
                     <fieldset>
                         <legend>Color Modifications:</legend>
-                        <input type="checkbox" 
-                            name="check" 
-                            id="checkbox7">
-                        <label for="checkbox7">Brightness</label>
+                        <label for="checkbox7">
+                            <input type="checkbox" name="check" id="checkbox7">
+                            Brightness
+                        </label>
                         <br>
-                        <input type="checkbox" 
-                            name="check" 
-                            id="checkbox8">
-                        <label for="checkbox8">Contrast</label>
+                        <label for="checkbox8">
+                            <input type="checkbox" name="check" id="checkbox8">
+                            Contrast
+                        </label>
                         <br>
-                        <input type="checkbox" 
-                            name="check" 
-                            id="checkbox9">
-                        <label for="checkbox9">Saturation</label>
+                        <label for="checkbox9">
+                            <input type="checkbox" name="check" id="checkbox9">
+                            Saturation
+                        </label>
                         <br>
-                        <input type="checkbox" 
-                            name="check" 
-                            id="checkbox10">
-                        <label for="checkbox10">Invert colors</label>
+                        <label for="checkbox10">
+                            <input type="checkbox" name="check" id="checkbox10">
+                            Invert colors
+                        </label>
                         <br>
                         <label for="BlueTintCheckbox">
                             <input type="checkbox" name="check" id="BlueTintCheckbox">
@@ -107,22 +107,21 @@
 
                     <fieldset>
                         <legend>Noise Modifications:</legend>
-                        <input type="checkbox" 
-                            name="check" 
-                            id="checkbox11">
-                        <label for="checkbox11">Gaussian noise</label>
+                        <label for="checkbox11">
+                            <input type="checkbox" name="check" id="checkbox11">
+                            Gaussian noise
+                        </label>
                         <br>
-                        <input type="checkbox" 
-                            name="check" 
-                            id="checkbox12">
-                        <label for="checkbox12">Salt and Pepper noise</label>
+                        <label for="checkbox12">
+                            <input type="checkbox" name="check" id="checkbox12">
+                            Salt and Pepper noise
+                        </label>
                     </fieldset>
                     <br>
                     <div>
                         <input type="submit" value="Load Image">
                     </div>
                 </form>
-                
             </div>
             <div>
                 <div>
