--- a/index.html
+++ b/index.html
@@ -125,7 +125,18 @@
             </div>
             <div>
                 <div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae illo consectetur necessitatibus maxime fugit modi vero distinctio obcaecati laborum, harum, blanditiis, dolore corporis! Fugiat rerum cupiditate, atque est totam eaque?</p>
+                    <p> <!-- May clean up -->
+                        <strong>Instructions for Data Augmentor:</strong><br>
+                        <strong>1.</strong> Select an image file (PNG, JPEG, SVG, GIF, WebP, or APNG) <br>
+                        <strong>2.</strong> Choose the number of images you would like to donwload <br>
+                        <strong>3.</strong> Check the options for image modifications <br>
+                        <strong>4.</strong> Select "Load Image" <br>
+                        <strong>5.</strong> Once ready to download, press the download image button <br><br>
+
+                        <strong>Modification Information:</strong><br>
+                        When selecting one image, Horizontal and Vertical flips will always be applied, otherwise they happen 50% of the time. <br>
+                        
+                    </p>
                 </div>
                 <section class="download_section">
                     <a id="downloadLink" download="image.png" style="display:inline-block; margin-top:10px;">Download Image</a>
