updated values for rotation, and blue tint

--- a/index.html
+++ b/index.html
@@ -128,14 +128,14 @@
                     <p> <!-- May clean up -->
                         <strong>Instructions for Data Augmentor:</strong><br>
                         <strong>1.</strong> Select an image file (PNG, JPEG, SVG, GIF, WebP, or APNG) <br>
-                        <strong>2.</strong> Choose the number of images you would like to donwload <br>
+                        <strong>2.</strong> Choose the number of images you would like to download <br>
                         <strong>3.</strong> Check the options for image modifications <br>
                         <strong>4.</strong> Select "Load Image" <br>
                         <strong>5.</strong> Once ready to download, press the download image button <br><br>
 
                         <strong>Modification Information:</strong><br>
                         When selecting one image, Horizontal and Vertical flips will always be applied, otherwise they happen 50% of the time. <br>
-                        
+
                     </p>
                 </div>
                 <section class="download_section">
